crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/fix_applied_inside_astro_attribute_expression.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
<div data-x={1 ** 2}></div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
