crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/multiline_fix_inside_astro_text_expression_is_reindented.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
<div>
	{() => {
    	return 1 ** 2;
    }}
</div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
